--- a/viewer/style.css
+++ b/viewer/style.css
@@ -8,7 +8,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 450px;
   height: 100%;
   overflow: hidden; /* 스크롤 방지 */
 }
@@ -160,7 +160,6 @@ button {
   display: flex;
   width: 100%;
   height: 72px;
-  padding: 4px 0px;
   flex-direction: row;
   align-items: center;
   background: #FFF;
