--- a/viewer/style.css
+++ b/viewer/style.css
@@ -8,7 +8,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  width: 450px;
+  width: 100%;
   height: 100%;
   overflow: hidden; /* 스크롤 방지 */
 }
@@ -39,8 +39,8 @@ button {
   width: 100%;
   height: 100vh;
   margin: 0 auto;
-  background: url(./assets/imges/seller_01.jpeg)
-    no-repeat center;
+  /* background: url(./assets/imges/seller_01.jpeg)
+    no-repeat center; */
   background-size: cover;
   
 }
